Saga Pattern in Microservices: An In-depth Overview #171

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,10 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
+springdoc.swagger-ui.path=/swagger-ui
 
 queue.name.payment=order.sync.payment
-queue.name.order=order.sync.order
+queue.name.notification=order.sync.notification
 
 
 spring.rabbitmq.host=localhost
