Saga Pattern in Microservices: An In-depth Overview #171 - Part 2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ springdoc.swagger-ui.path=/swagger-ui
 
 queue.name.payment=order.sync.payment
 queue.name.notification=order.sync.notification
+queue.name.order=order.sync.order
 
 
 spring.rabbitmq.host=localhost
